# saccadapt

./: .gitignore  README.md  lookatdata.ipynb  run.sh
.github/workflows/: eye.yml
eye/: pyproject.toml
eye/src/: __init__.py  eye.py
eye/tests/: eye_test.py  test.asc
eyeloader/: pyproject.toml
eyeloader/src/: __init__.py  eyeloader.py
isolate_right/: README.md  main.py
isolate_right/data/: test.csv
isolate_right/output/: test.csv
